feat: implement Tasks & Scheduling page for unified task management; update navigation and localization

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -61,7 +61,8 @@
     "training": "Training",
     "tools": "Tools",
     "notifications": "Notifications",
-    "schedule": "Schedule"
+    "schedule": "Schedule",
+    "tasksScheduling": "Tasks & Scheduling"
   },
   "settings": {
     "title": "Settings",
