feat: add internationalization support to dashboard components
- Integrated `react-i18next` for translation in Desktop and Mobile dashboards.
- Updated greeting and summary texts to use translation keys.
- Added translation keys for quick actions and descriptions in English and French.
- Refactored navigation items in DashboardPage to utilize translation for labels.
- Enhanced Tailwind CSS configuration with a new fade-in animation.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -67,6 +67,11 @@
     "recordThought": "Record Thought",
     "viewMemories": "View Memories",
     "todaysSummary": "Today's Summary"
+    ,
+    "quickActions": "Quick Actions",
+    "recordThoughtDescription": "Capture your ideas now",
+    "viewMemoriesDescription": "Browse your knowledge",
+    "todaysSummaryDescription": "See your highlights"
   },
   "navigation": {
     "appName": "Second Brain AI",
