feat: ajouter le support de la traduction pour les paramètres de notification et la page d'analytique

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -128,6 +128,7 @@
     "title": "Memories",
     "memories": "Memories",
     "subtitle": "Explore and manage your memories",
+    "semanticSearchActive": "Semantic search active",
     "noMemoriesFound": "No memories found",
     "searchPlaceholder": "Search your memories...",
     "memoryType": "Memory Type",
